--- a/resume.tex
+++ b/resume.tex
@@ -31,8 +31,8 @@
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
 %% Color for highlight
 % Define your custom color if you don't like awesome colors
-\colorlet{awesome}{blurple}
-%\definecolor{awesome}{HTML}{CA63A8}
+%\colorlet{awesome}{blurple}
+\definecolor{awesome}{HTML}{604093}
 %% Colors for text
 %\definecolor{darktext}{HTML}{414141}
 %\definecolor{text}{HTML}{414141}
@@ -47,15 +47,24 @@
 %     Profile
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{center}
-	\headerfirstnamestyle{Eashwar}  \headerlastnamestyle{Mohan} \\
+	\firstname{eashwar}
+	\lastname{mohan}
+	\email{eash@eash.dev}
+	\link{eash.dev}
+	\github{eashwar}
+	\linkedin{eashw}
+	\location{San Francisco, CA}
 
-	{\color{purple}{\faEnvelope\ \bodyfont{eash@eash.dev}}} | {\color{purple}{\faMapMarker\ \bodyfont{San Francisco, CA}}} | {\color{purple}{\faLink\ \bodyfont{eash.dev}}}
+	\makecvheader
+	% \headerfirstnamestyle{eashwar}  \headerlastnamestyle{mohan} \\
+
+	% {\color{purple}{\faEnvelope\ \bodyfont{eash@eash.dev}}} | {\color{purple}{\faMapMarker\ \bodyfont{San Francisco, CA}}} | {\color{purple}{\faLink\ \bodyfont{eash.dev}}}
 \end{center}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Employment
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-6mm}
+% \vspace{-6mm}
 \cvsection{Employment}
 \vspace{-2mm}
 
@@ -86,7 +95,7 @@
 	{Aug 2023 - Sep 2024}
 	{\begin{cvitems}
 		\item{Direct and manage the reliability program for Roblox's internal testing and staging environments used by engineers, QA, and designers, authoring training material, cross-functional process runbooks, and escalation policies. To date, reduce incident rate by over 70\%, MTTM by over 85\%, and help save tens of thousands of hours in developer and QA productivity.}
-		\item{Administrate and deploy third-party developer tools for source code management and continuous integration tooling at the company, including GitHub Enterprise (both Cloud and Server), self-hosted GitHub Actions agents and Sourcegraph, as well as build in-house suite of tooling for automation, management, and permission security.}
+		\item{Administrate and deploy third-party developer tools for source code management and continuous integration tooling at the company, including GitHub Enterprise (both Cloud and Server), self-hosted GitHub Actions agents and Sourcegraph, as well as build in-house suite of tooling for automation, management, and permission security. Nearly 2000 users, 5000 git repositories, and millions of CI jobs a day.}
 		\item{Implement novel microsevice canary testing mechanisms for HTTP and gRPC services to enable the rollout of continous deployment to Roblox backend teams.}
 	\end{cvitems}}
 
@@ -172,7 +181,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Education
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-4mm}
+% \vspace{-4mm}
 \cvsection{Education}
 \vspace{-2mm}
 \cventry
@@ -209,7 +218,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Projects
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-6mm}
+% \vspace{-6mm}
 \cvsection{Projects}
 \vspace{-2mm}
 
@@ -241,34 +250,34 @@
 
 	% \vspace{-6mm}
 	
-	\cventry
-	{Portfolio Website. Single-page-app implemented in raw JS (no libraries).}
+	\projentry
+	{Single-page-app implemented in raw JS (no libraries). \href{https://github.com/eashwar/eash.dev}{Github: eashwar/eash.dev}}
 	{Personal Website}
-	{eash.dev}
+	{\href{https://eash.dev}{eash.dev}}
 	{}
 	{}
 
 	\vspace{-6mm}
-	\cventry
+	\projentry
 	{Scripts and automation for my self-hosted Kubernetes cluster on my home server.}
 	{Self Hosting scripts}
-	{github.com/eashwar/self-hosting}
+	{\href{https://github.com/eashwar/self-hosting}{github: eashwar/self-hosting}}
 	{}
 	{}
 
 	\vspace{-6mm}
-	\cventry
+	\projentry
 	{A suite of self-hosted TypeScript discord bots for a cooking community discord.}
 	{RMFPBot}
-	{github.com/SaltCellar-FOSS}
+	{\href{https://github.com/SaltCellar-FOSS}{github: SaltCellar-FOSS}}
 	{}
 	{}
 
 	\vspace{-6mm}
-	\cventry
+	\projentry
 	{Self-produced and recorded music.}
 	{Music Composition/Production}
-	{music.eash.dev}
+	{\href{https://music.eash.dev}{music.eash.dev}}
 	{}
 	{}
 	
@@ -279,12 +288,12 @@
 %     Activities
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \newpage
-\vspace{-2mm}
+% \vspace{-2mm}
 \cvsection{Activities}
 \vspace{-2mm}
 	\cventry
 	{Co-Lead - Pride; Co-lead - RunClub; Co-lead - Indie Games Club}
-	{Employee Resource Groups Involvmement}
+	{Employee Resource Groups Involvmement - Roblox}
 	{}
 	{January 2022 – Present}
 	{\begin{cvitems}
