--- a/resume.tex
+++ b/resume.tex
@@ -96,7 +96,7 @@
 	{\begin{cvitems}
 		\item{Direct and manage the reliability program for Roblox's internal testing and staging environments used by engineers, QA, and designers, authoring training material, cross-functional process runbooks, and escalation policies. To date, reduce incident rate by over 70\%, MTTM by over 85\%, and help save tens of thousands of hours in developer and QA productivity.}
 		\item{Administrate and deploy third-party developer tools for source code management and continuous integration tooling at the company, including GitHub Enterprise (both Cloud and Server), self-hosted GitHub Actions agents and Sourcegraph, as well as build in-house suite of tooling for automation, management, and permission security. Nearly 2000 users, 5000 git repositories, and millions of CI jobs a day.}
-		\item{Implement novel microsevice canary testing mechanisms for HTTP and gRPC services to enable the rollout of continous deployment to Roblox backend teams.}
+		\item{Implement novel microsevice canary testing mechanisms for HTTP and gRPC services to enable the rollout of continuous deployment to Roblox backend teams.}
 	\end{cvitems}}
 
 	\vspace{-5mm}
@@ -297,7 +297,7 @@
 	{}
 	{January 2022 – Present}
 	{\begin{cvitems}
-		\item {Coordinate and plan events for Roblox's LGBTQ+ employee group, including helping pioneer Roblox's first participatin in San Francisco Pride Parade.}
+		\item {Coordinate and plan events for Roblox's LGBTQ+ employee group, including helping pioneer Roblox's first participation in San Francisco Pride Parade.}
 		\item {Organize weekly running events for company run group.}
 		\item {Moderate monthly discussions of playthroughs of independently made video games.}
 		\end{cvitems}}
