update resume with new branding colors

--- a/resume.tex
+++ b/resume.tex
@@ -32,7 +32,7 @@
 %% Color for highlight
 % Define your custom color if you don't like awesome colors
 %\colorlet{awesome}{blurple}
-\definecolor{awesome}{HTML}{604093}
+\definecolor{awesome}{HTML}{3d566c}
 %% Colors for text
 %\definecolor{darktext}{HTML}{414141}
 %\definecolor{text}{HTML}{414141}
@@ -58,7 +58,7 @@
 	\makecvheader
 	% \headerfirstnamestyle{eashwar}  \headerlastnamestyle{mohan} \\
 
-	% {\color{purple}{\faEnvelope\ \bodyfont{eash@eash.dev}}} | {\color{purple}{\faMapMarker\ \bodyfont{San Francisco, CA}}} | {\color{purple}{\faLink\ \bodyfont{eash.dev}}}
+	% {\color{blue}{\faEnvelope\ \bodyfont{eash@eash.dev}}} | {\color{blue}{\faMapMarker\ \bodyfont{San Francisco, CA}}} | {\color{blue}{\faLink\ \bodyfont{eash.dev}}}
 \end{center}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
