--- a/resume.tex
+++ b/resume.tex
@@ -364,8 +364,8 @@
 	{}
 	{}
 	{\begin{cvitems}
-		\item {Languages: C\#/.NET, Terraform, Python, Golang, TypeScript/JavaScript, HTML5/CSS, YAML/XAML/JSON/TOML}
-		\item {Tooling: Git, GitHub, Docker, HCP Vault, Scripting (python, powershell, bash)}
+		\item {Languages \& Frameworks: C\#/.NET, Terraform, Python, Golang, Node/TS/JS, React/HTML5/CSS, Bash, PowerShell}
+		\item {Tooling: Git, GitHub + GitHub Actions, AWS, Docker, Kubernetes, HCP Vault}
 		\item {Music: Reaper, Ableton, Clarinet (15 years), Piano (18 years), Composition (10 years)}
 	\end{cvitems}}
 
