one more update

--- a/resume.tex
+++ b/resume.tex
@@ -364,7 +364,7 @@
 	{}
 	{}
 	{\begin{cvitems}
-		\item {Languages \& Frameworks: C\#/.NET, Terraform, Python, Golang, Node/TS/JS, React/HTML5/CSS, Bash, PowerShell}
+		\item {Languages \& Frameworks: C\#/.NET, Terraform, Python, Golang, Node/TS/JS, React/HTML5/CSS, Bash, PowerShell, C/C++}
 		\item {Tooling: Git, GitHub + GitHub Actions, AWS, Docker, Kubernetes, HCP Vault}
 		\item {Music: Reaper, Ableton, Clarinet (15 years), Piano (18 years), Composition (10 years)}
 	\end{cvitems}}
