--- a/resume.tex
+++ b/resume.tex
@@ -41,7 +41,9 @@
 
 %%% Override a separator for social informations in header(default: ' | ')
 %\headersocialsep[\quad\textbar\quad]
-    \begin{document}
+
+\XeTeXgenerateactualtext=1
+\begin{document}
     
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Profile
